<?xml version="1.0" encoding="UTF-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AppCompatResource"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuShare"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuRandom"
        android:title="@string/random"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menuPI"
        android:title="@string/getPI" />

    <item
        android:id="@+id/menuSave"
        android:title="@string/save" />

    <item
        android:id="@+id/menuRestore"
        android:title="@string/restore" />

    <item
        android:id="@+id/menuReset"
        android:title="@string/reset" />

</menu>

